--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "nodegsm",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "GSM API for NodeJS",
-  "main": "gsm/index.js",
+  "main": "src/index.js",
   "files": ["src/**/*"],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
